fixed menu scrollbar issue

--- a/force-app/main/extensions/lwc/dsfrSearchCmp/dsfrSearchCmp.css
+++ b/force-app/main/extensions/lwc/dsfrSearchCmp/dsfrSearchCmp.css
@@ -13,6 +13,11 @@
     margin-left:  0rem !important;
     margin-right:  0rem !important;
 }
+.selectMenu .fr-menu {
+    pointer-events: auto !important;
+    padding-left:  0.1rem !important;
+    padding-right:  0.1rem !important;
+}
 /*.selectMenu {
     position: relative !important;
     margin-bottom: var(--title-spacing) !important;
